--- a/.github/build.env
+++ b/.github/build.env
@@ -1,4 +1,4 @@
 MAVEN_MATRIX="3.8.3", "3.8.2"
 JAVA_MATRIX="8", "11", "17", "18-ea"
 JAVA_DISTRIBUTION_MATRIX="zulu"
-JAVA_DISTRIBUTION_DEFAULT="zulu"
+JAVA_DISTRIBUTION_DEFAULT=zulu
