--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,12 +6,12 @@ on:
       - 'master'
       - 'main'
 
-#concurrency:
-#  group: pr-${{ github.head_ref }}
-#  cancel-in-progress: true
+concurrency:
+  group: pr-${{ github.head_ref }}
+  cancel-in-progress: true
 
 jobs:
-  build:
-    name: Build
+  verify:
+    name: Verify
     uses: s4u/.github/.github/workflows/maven-pr.yml@master
 
