--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
     uses: s4u/.github/.github/workflows/maven-build.yml@master
     secrets:
       SIGN_KEY:       ${{ secrets.SIGN_KEY }}
+      SIGN_KEY_PASS:  ${{ secrets.SIGN_KEY_PASS }}
       OSS_USER:       ${{ secrets.OSS_USER }}
       OSS_PASS:       ${{ secrets.OSS_PASS }}
       TECH_TOKEN:     ${{ secrets.TECH_TOKEN }}
