--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
   test-hash:
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ hashFiles('**/pom.xml, README.md') }}
+      - run: echo ${{ hashFiles('**/pom.xml\n README.md') }}
 
 #  build:
 #    name: Build
