--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,14 @@ on:
     - cron: '55 5 * * 5'
 
 jobs:
+
   build:
     name: Build
     uses: s4u/.github/.github/workflows/maven-build.yml@master
+    with:
+      java-matrix:  '["8", "11", "17", "18-ea", "18"]'
+      java-dist-matrix: '["zulu", "temurin"]'
+      maven-matrix: '["3.8.3", "3.6.3"]'
 
     secrets:
       SIGN_KEY:       ${{ secrets.SIGN_KEY }}
