--- a/.github/workflows/build-new-jdk.yml
+++ b/.github/workflows/build-new-jdk.yml
@@ -13,87 +13,12 @@ on:
 
 jobs:
 
-  build-18-zulu:
-    name: 18 zulu
+  build:
+    name: build 18
     uses: s4u/.github/.github/workflows/maven-build.yml@master
     with:
-      java-matrix:  '["18"]'
-      java-dist-matrix: '["zulu"]'
-
-    secrets:
-      SIGN_KEY:       ${{ secrets.SIGN_KEY }}
-      SIGN_KEY_PASS:  ${{ secrets.SIGN_KEY_PASS }}
-      OSS_USER:       ${{ secrets.OSS_USER }}
-      OSS_PASS:       ${{ secrets.OSS_PASS }}
-      TECH_TOKEN:     ${{ secrets.TECH_TOKEN }}
-
-  build-18-ea-zulu:
-    needs: build-18-zulu
-    name: 18-ea zulu
-    uses: s4u/.github/.github/workflows/maven-build.yml@master
-    with:
-      java-matrix:  '["18-ea"]'
-      java-dist-matrix: '["zulu"]'
-
-    secrets:
-      SIGN_KEY:       ${{ secrets.SIGN_KEY }}
-      SIGN_KEY_PASS:  ${{ secrets.SIGN_KEY_PASS }}
-      OSS_USER:       ${{ secrets.OSS_USER }}
-      OSS_PASS:       ${{ secrets.OSS_PASS }}
-      TECH_TOKEN:     ${{ secrets.TECH_TOKEN }}
-
-  build-18-temurin:
-    needs: build-18-ea-zulu
-    name: 18 temurin
-    uses: s4u/.github/.github/workflows/maven-build.yml@master
-    with:
-      java-matrix:  '["18"]'
-      java-dist-matrix: '["temurin"]'
-
-    secrets:
-      SIGN_KEY:       ${{ secrets.SIGN_KEY }}
-      SIGN_KEY_PASS:  ${{ secrets.SIGN_KEY_PASS }}
-      OSS_USER:       ${{ secrets.OSS_USER }}
-      OSS_PASS:       ${{ secrets.OSS_PASS }}
-      TECH_TOKEN:     ${{ secrets.TECH_TOKEN }}
-
-  build-18-ea-temurin:
-    needs: build-18-temurin
-    name: 18-ea temurin
-    uses: s4u/.github/.github/workflows/maven-build.yml@master
-    with:
-      java-matrix:  '["18-ea"]'
-      java-dist-matrix: '["temurin"]'
-
-    secrets:
-      SIGN_KEY:       ${{ secrets.SIGN_KEY }}
-      SIGN_KEY_PASS:  ${{ secrets.SIGN_KEY_PASS }}
-      OSS_USER:       ${{ secrets.OSS_USER }}
-      OSS_PASS:       ${{ secrets.OSS_PASS }}
-      TECH_TOKEN:     ${{ secrets.TECH_TOKEN }}
-
-  build-18-liberica:
-    needs: build-18-ea-temurin
-    name: 18 liberica
-    uses: s4u/.github/.github/workflows/maven-build.yml@master
-    with:
-      java-matrix:  '["18"]'
-      java-dist-matrix: '["liberica"]'
-
-    secrets:
-      SIGN_KEY:       ${{ secrets.SIGN_KEY }}
-      SIGN_KEY_PASS:  ${{ secrets.SIGN_KEY_PASS }}
-      OSS_USER:       ${{ secrets.OSS_USER }}
-      OSS_PASS:       ${{ secrets.OSS_PASS }}
-      TECH_TOKEN:     ${{ secrets.TECH_TOKEN }}
-
-  build-18-ea-liberica:
-    needs: build-18-liberica
-    name: 18-ea liberica
-    uses: s4u/.github/.github/workflows/maven-build.yml@master
-    with:
-      java-matrix:  '["18-ea"]'
-      java-dist-matrix: '["liberica"]'
+      java-matrix:  '["18", "18-ea"]'
+      java-dist-matrix: '["zulu", "temurin", "liberica"]'
 
     secrets:
       SIGN_KEY:       ${{ secrets.SIGN_KEY }}
