--- a/.github/ISSUE_TEMPLATE/IMPROVEMENT.yml
+++ b/.github/ISSUE_TEMPLATE/IMPROVEMENT.yml
@@ -30,5 +30,5 @@ body:
   - type: textarea
     id: massage
     attributes:
-      label: Please describe a improvement proposition.
+      label: Improvement proposition.
 
