--- a/.github/ISSUE_TEMPLATE/BUG.yml
+++ b/.github/ISSUE_TEMPLATE/BUG.yml
@@ -32,7 +32,7 @@ body:
   - type: textarea
     id: massage
     attributes:
-      label: Please describe a bug
+      label: Bug description
 
   - type: input
     id: url
