--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -18,4 +18,20 @@ jobs:
         env:
           GITHUB_CONTEXT: ${{ toJson(github) }}
         run: echo "$GITHUB_CONTEXT"
-        shell: bash
+
+      - name: Current labels
+        run: > 
+          echo "PR#${{github.event.pull_request.number}} labels: ${{ join(github.event.pull_request.labels.*.name, ', ') }}"
+
+      - name: Required labels missing
+        if: >
+          event.pull_request.draft == false &&
+          !(
+            contains(github.event.pull_request.labels.*.name, 'bug') ||
+            contains(github.event.pull_request.labels.*.name, 'dependencies')
+          )
+
+        run: >
+          echo "PR#${{github.event.pull_request.number}} labels: ${{ join(github.event.pull_request.labels.*.name, ', ') }}"
+          false
+
