--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -31,6 +31,7 @@ jobs:
             contains(github.event.pull_request.labels.*.name, 'dependencies')
           )
 
-        run: > 
+        run: | 
+          echo "PR should have on of label: bug, dependencies"
           false
 
