--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   env-info:
+    if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
 
     steps:
@@ -20,8 +21,6 @@ jobs:
         run: echo "$GITHUB_CONTEXT"
 
       - name: List Reviews
-        if: >
-          github.event.pull_request.draft == false
         uses: actions/github-script@v7
         with:
           script: |
