--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -24,6 +24,8 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            console.log(context);
+          
             const reviews = await github.rest.pulls.listReviews({
               owner: context.repo.owner,
               repo: context.repo.repo,
