--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -10,29 +10,22 @@ on:
       - submitted
 
 jobs:
-  env-info:
+  review-decision:
     if: github.event.pull_request.draft == false
     runs-on: ubuntu-latest
+    outputs:
+      decision: ${{ steps.review-decision.outputs.result }}
 
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJson(github) }}
-        run: echo "$GITHUB_CONTEXT"
-
-      - name: List Reviews
-        id: list-reviews
+      - name: Get Review decision
+        id: review-decision
         uses: actions/github-script@v7
         with:
           script: |
-            console.log(context);
-            
             const query = `query($owner:String!, $name:String!, $number:Int!) {
               repository(name: $name, owner: $owner) {
                 pullRequest(number: $number) {
-                  title
                   reviewDecision
-                  url
                 }
               }
             }`;
@@ -46,11 +39,28 @@ jobs:
             const result = await github.graphql(query, variables)
             console.log(result)
             
-            return result;
+            return result.repository.pullRequest.reviewDecision;
 
-      - name: Review result
-        run: echo "${{steps.list-reviews.outputs.result}}"
+  milistopns:
+    needs: review-decision
+    runs-on: ubuntu-latest
+    if: github.event.pull_request.milestone != null
+    steps:
+      - name: Get Milestone
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const milestones = await github.rest.issues.listMilestones({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'open'
+            });
+            console.log(milestones);
 
+  labels:
+    needs: review-decision
+    runs-on: ubuntu-latest
+    steps:
       - name: Current labels - ${{ join(github.event.pull_request.labels.*.name, ', ') }}
         run: "true"
 
@@ -66,15 +76,3 @@ jobs:
           echo "PR should have on of label: bug, dependencies"
           false
 
-      - name: Check Milestone
-        if: >
-          github.event.pull_request.draft == false
-        uses: actions/github-script@v7
-        with:
-          script: |            
-            const milestones = await github.rest.issues.listMilestones({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              state: 'open'
-            });
-            console.log(milestones);
