--- a/.github/workflows/pull-reguest-managemnt.yml
+++ b/.github/workflows/pull-reguest-managemnt.yml
@@ -74,7 +74,7 @@ jobs:
               repo: context.repo.repo,
               pull_number: context.issue.number,
               body: {
-                milestone: milestones.data.get(0).number
+                milestone: milestones.data[0].number
               }
             });
             
